    + update gcc-4.7.x version to 4.7.4
    + add support for gcc-4.8.x
    + add EXPERIMENTAL support for gcc-4.9.x
  * support for a 3rd (auxiliary) firmware
  * fakeroot: bump version to 1.20.2
  * sfk: bump version to 1.7.2

- New tools and hooks:
  * fwdu: script to download (and unpack) all firmwares by ftp.avm.de
  * verify-dls.sh: script to validate download urls in Config.in

- New patches (read online help for more info):

- New packages, libs, modules:
    * asterisk 11.13.1
    * asterisk-chan-capi post-1.1.6 with asterisk11 adjustments by Mihai Moldovan
    * asterisk-chan-dongle 1.1-git (asterisk11 branch)
    * asterisk-chan-sccp 4.1.0RC1
    * asterisk-gui 2.1.0RC1
    * autossh 1.4d
    * avm-forwarding 0.0.1
    * axTLS wrapper 1.4.9
    * cntlm 0.93beta5
    * ISC dhcp 4.2.5-P1
    * E-MailRelay 1.9
    * iksemel 1.5-git
    * libavmacl2 (taken from AVM's 7490.06.01 open-source package)
    * libcap 2.24
    * libgsm-1.0.13
    * libnettle 2.7.1
    * libsrtp-1.4.4+20100615
    * libusb-compat 0.1.5
    * php 5.5.18
    * PJProject 2.2.1
    * python-mechanize 0.2.5
    * serf 1.2.1
    * ScanButton 0.2.3.cvs20090713
    * speex 1.2rc1
    * spandsp 0.0.6pre21
    * squashfs-tools 3.4

- Updated tools and hooks:

- Updated patches:

- Updated packages and libs:
    * apache 2.4.10
    * apr 1.5.1
    * apr-util 1.5.4
    * bash 3.2.53
    * bind 9.8.4-P2
    * bip 0.8.9
    * bird 1.4.0
    * CCID 1.4.18
    * cifs-utils 6.4
    * curl 7.39.0
    * cyassl 3.2.0
    * dbus 1.8.8
    * dnsmasq 2.72
    * dosfstools 3.0.26
    * dropbear 2014.66
    * e2fsprogs 1.42.12
    * expat 2.1.0
    * ffmpeg 1.2.8
    * freetype 2.5.3
    * gdb 7.8
    * git 2.1.3
    * gmp 6.0.0
    * gnu-make 4.1
    * gnutls 2.12.23
    * haproxy 1.5.8
    * haserl 0.9.33
    * hplip 3.14.6
    * htop 1.0.3
    * httpry 0.1.8
    * ImageMagick 6.8.9-5
    * inadyn-mt 02.24.43
    * iodine 0.7.0
    * jpeg 6b2
    * knock 0.7
    * lftp 4.6.0