@@ -19,6 +19,7 @@ Latest changes:
 - New tools and hooks:
   * fwdu: script to download (and unpack) all firmwares by ftp.avm.de
   * verify-dls.sh: script to validate download urls in Config.in
+  * scons: python based software construction tool (s. http://www.scons.org/ for details)
 
 - New patches (read online help for more info):
 
